--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
     // 🧠 Examples of usage:
     // processSingleLearner({ name: "Elisabeth", lovesJS: 1 }) // should return { name: "Elisabeth", lovesJS: true }
     // processSingleLearner({ name: "Pete", age: 23, lovesJS: 0 }) // should return { name: "Pete", age: 23, lovesJS: false }
-    const processSingleLearner = () => {
+    const processSingleLearner = (learner) => {
+      if (learner.lovesJS === 0) {
+        learner.lovesJS = false
+      } else if (learner.lovesJS === 1) {
+        learner.lovesJS = true
+      }
+      return learner
 
     }
 
@@ -41,7 +47,13 @@
     // ❗ Notes:
     // 🧠 There are many approaches to this problem: using a loop, using forEach, using map...
     // 🧠 Solve this challenge using a for/in loop or a for loop.
-    const processLearnersLoop = () => {
+    const processLearnersLoop = (learners) => {
+      let result = []
+      for (let index in learners) {
+        const learner = learners[index]
+        processSingleLearner(learner)
+      }
+      return learners
 
     }
 
@@ -51,7 +63,11 @@
     // ❗ Notes:
     // 🧠 Solve this challenge using the forEach method of the learners array.
     // 🧠 Use arrow functions whenever possible.
-    const processLearnerForEach = () => {
+    const processLearnerForEach = (learners) => {
+      learners.forEach(learner => {
+        processSingleLearner(learner)
+      })
+      return learners
 
     }
 
@@ -61,9 +77,18 @@
     // ❗ Notes:
     // 🧠 Solve this challenge using the map method of the learners array.
     // 🧠 Use arrow functions.
-    const processLearnerMap = () => {
-
+    const processLearnerMap = (learners) => {
+      const result = learners.map(learner => {
+        if (learner.lovesJS === 0) {
+          learner.lovesJS = false
+        } else if (learner.lovesJS === 1) {
+          learner.lovesJS = true
+        }
+        return learner
+      })
+      return result
     }
+
 
     // 👉 CHALLENGE 5
     // 🧠 The function getJavaScriptLoversForEach takes an array of learner objects and returns an array or a string.
@@ -73,8 +98,17 @@
     // ❗ Notes:
     // 🧠 Solve this challenge using the forEach method of the learners array.
     // 🧠 You will need to declare a result array into which you push learners from inside your forEach loop.
-    const getJavaScriptLoversForEach = () => {
-
+    const getJavaScriptLoversForEach = (learners) => {
+      let result = []
+      learners.forEach(learner => {
+        if (learner.lovesJS) {
+          result.push(learner)
+        }
+      })
+      if (!result.length) {
+        return "no JS lovers here!"
+      }
+      return result
     }
 
     // 👉 CHALLENGE 6
@@ -82,14 +116,23 @@
     // 🧠 It should work exactly the same as the getJavaScriptLoversForEach function above.
     // ❗ Notes:
     // 🧠 Solve this challenge using the filter method of the learners array.
-    const getJavaScriptLoversFilter = () => {
-
+    const getJavaScriptLoversFilter = (learners) => {
+      let filtered = learners.filter(learner => {
+        if (learner.lovesJS) {
+          return true
+        }
+        return false
+      })
+      if (!filtered.length) {
+        return "no JS lovers here!"
+     }
+     return filtered
     }
 
     // 👉 CHALLENGE 7
     // 🧠 The function sumOddInts takes an array of integers as its argument and returns an array with two elements.
     // 🧠 The first element is a number which is the sum of the odd integers in the original array.
-    // 🧠 The second element is an array containing only the odd numbers from the original array, in the same order.
+    // 🧠 The second elem ent is an array containing only the odd numbers from the original array, in the same order.
     // 🧠 Examples of usage:
     // sumOddInts([0, 1, 2, 3, 4, 5]) // should return [9, [1, 3, 5]]
     // sumOddInts([2, 5, 1, 4, 0]) // should return [6, [5, 1]]
@@ -98,7 +141,16 @@
     // ❗ Notes:
     // 🧠 This could be solved by using filter to make an array of odd integers, and then using forEach to add them up.
     // 🧠 Or you could opt for solving everything with a single forEach which is the recommended approach (saves a loop).
-    const sumOddInts = () => {
+    const sumOddInts = (ints) => {
+      let odds = []
+      let sum = 0
+      ints.forEach(int => {
+        if (int % 2 !== 0) {
+          odds.push(int)
+          sum += int
+        }
+      })
+      return [sum, odds]
 
     }
 
@@ -113,7 +165,16 @@
     // checkInts(2, 6) // should return ["even", "even"]
     // ❗ Notes:
     // 🧠 Solve this problem using rest parameters and map.
-    const checkInts = () => {
+    const checkInts = (...nums) => {
+      if(!nums.length) {
+        return "pass some arguments, yo!"
+      }
+      return nums.map(num => {
+        if (num % 2 === 0) {
+          return 'even'
+        }
+        return 'odd'
+      })
 
     }
 
